Ejercicio 9 guia 4
Agregamos RunTimeException en caso de que se desee extraer fondos y no
se tiene el amount necesario